--- a/config/projects/iris_classification.yaml
+++ b/config/projects/iris_classification.yaml
@@ -39,8 +39,8 @@ project:
         - evaluate_model
 
     evaluate_model:
-      next:
-        - create_plots
+      next: 
+        - create_report
 
     create_plots:
       next: []
